# heat_transfer

./: CMakeLists.txt  README.md  balance.cpp  get_surface_norm.h  init_buffer.h  key_comparison.h  main.cpp  mesh.h  read_model.h  write_model.h
shader/: CMakeLists.txt  camera.h  demo.fs  demo.vs  display.cpp  init_window.cpp  init_window.h  plane.fs  plane.vs  point.fs  point.vs  shader.h  transfer.cpp  transfer.cu
