ADD_LIBRARY(glad STATIC ${CMAKE_SOURCE_DIR}/extern/glad/src/glad.c)
TARGET_INCLUDE_DIRECTORIES(glad PUBLIC ${CMAKE_SOURCE_DIR}/extern/glad/include ${CMAKE_SOURCE_DIR}/extern/glm)

find_package(GLEW REQUIRED)
if (GLEW_FOUND)
  include_directories(${GLEW_INCLUDE_DIRS})
  link_libraries(${GLEW_LIBRARIES})
endif()


find_package(assimp REQUIRED)

SET(lib_file
  init_window.cpp
  stb_image.cpp)
ADD_LIBRARY(common ${lib_file})
TARGET_INCLUDE_DIRECTORIES(common PUBLIC ${CMAKE_SOURCE_DIR}/extern/glad/include /usr/local/include/eigen3)
ADD_EXECUTABLE(balance balance.cpp)
TARGET_INCLUDE_DIRECTORIES(balance PUBLIC ${CMAKE_SOURCE_DIR}/extern/glad/include ${CMAKE_SOURCE_DIR})
TARGET_LINK_LIBRARIES(balance glad dl GL GLU glut glfw ${ASSIMP_LIBRARIES} common)
SET_TARGET_PROPERTIES(balance
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

ADD_EXECUTABLE(transfer transfer.cpp)
TARGET_INCLUDE_DIRECTORIES(transfer PUBLIC ${CMAKE_SOURCE_DIR}/extern/glad/include ${CMAKE_SOURCE_DIR})
TARGET_LINK_LIBRARIES(transfer glad dl GL GLU glut glfw ${ASSIMP_LIBRARIES} common)
SET_TARGET_PROPERTIES(transfer
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
